--- a/src/project/local_settings.py.template
+++ b/src/project/local_settings.py.template
@@ -1,13 +1,13 @@
-TIME_ZONE = 'America/New_York'
+TIME_ZONE = 'Russia/Novosibirsk'
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
-EMAIL_ADDRESS = 'shareabouts@example.com'
+EMAIL_ADDRESS = 'nikolai@academ.org'
 EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
 
 # Uncomment the following line if you would like to also receive emails that
 # are sent to your users.
-#EMAIL_NOTIFICATIONS_BCC = 'shareabouts@example.com'
+#EMAIL_NOTIFICATIONS_BCC = 'nikolai@academ.org'
 
 # The SHAREABOUTS['FLAVOR'] environment variable is used as a prefix for the
 # Shareabouts configuration. configuration is expected to live in a package
